burn cost on user order creation

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,13 +31,13 @@
     "vitest": "^1.5.2"
   },
   "dependencies": {
-    "@latticexyz/common": "2.0.8-main-df4781ac",
-    "@latticexyz/recs": "2.0.8-main-df4781ac",
-    "@latticexyz/schema-type": "2.0.8-main-df4781ac",
-    "@latticexyz/services": "2.0.8-main-df4781ac",
-    "@latticexyz/store-sync": "2.0.8-main-df4781ac",
-    "@latticexyz/utils": "2.0.8-main-df4781ac",
-    "@latticexyz/world": "2.0.8-main-df4781ac",
+    "@latticexyz/common": "2.0.8",
+    "@latticexyz/recs": "2.0.8",
+    "@latticexyz/schema-type": "2.0.8",
+    "@latticexyz/services": "2.0.8",
+    "@latticexyz/store-sync": "2.0.8",
+    "@latticexyz/utils": "2.0.8",
+    "@latticexyz/world": "2.0.8",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^6.15.20",
     "@sanity/image-url": "^1.0.2",
