--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "pnpm recursive run test"
   },
   "devDependencies": {
-    "@latticexyz/cli": "2.0.8-main-df4781ac",
+    "@latticexyz/cli": "2.0.8",
     "@typescript-eslint/eslint-plugin": "7.7.1",
     "@typescript-eslint/parser": "7.7.1",
     "eslint": "8.56.0",
