--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -22,20 +22,20 @@
     "deploy:redstone-rhodolite": "---------------------------"
   },
   "dependencies": {
-    "@latticexyz/cli": "2.0.8-main-df4781ac",
-    "@latticexyz/config": "2.0.8-main-df4781ac",
-    "@latticexyz/gas-report": "2.0.8-main-df4781ac",
-    "@latticexyz/schema-type": "2.0.8-main-df4781ac",
-    "@latticexyz/store": "2.0.8-main-df4781ac",
-    "@latticexyz/world": "2.0.8-main-df4781ac",
-    "@latticexyz/world-modules": "2.0.8-main-df4781ac",
+    "@latticexyz/cli": "2.0.8",
+    "@latticexyz/config": "2.0.8",
+    "@latticexyz/gas-report": "2.0.8",
+    "@latticexyz/schema-type": "2.0.8",
+    "@latticexyz/store": "2.0.8",
+    "@latticexyz/world": "2.0.8",
+    "@latticexyz/world-modules": "2.0.8",
     "@types/node": "^20.12.7",
     "ds-test": "github:dapphub/ds-test#c9ce3f25bde29fc5eb9901842bf02850dfd2d084",
     "forge-std": "github:foundry-rs/forge-std#b4f121555729b3afb3c5ffccb62ff4b6e2818fd3",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.5.4",
-    "solhint-config-mud": "2.0.8-main-df4781ac",
-    "solhint-plugin-mud": "2.0.8-main-df4781ac"
+    "solhint-config-mud": "2.0.8",
+    "solhint-plugin-mud": "2.0.8"
   }
 }
