--- a/packages/contracts/foundry.toml
+++ b/packages/contracts/foundry.toml
@@ -25,7 +25,7 @@ fs_permissions = [{ access = "read", path = "./"}]
 [doc]
 ignore=["codegen"]
 
-[profile.redstone-garnet]
+[profile.garnet]
 eth_rpc_url = "https://rpc.garnetchain.com"
 
 [profile.redstone]
