--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -15,25 +15,25 @@
     "test-verbose": "mud test --forgeOptions=' -vvv'",
     "test-single": "mud test --forgeOptions='--match-test testOrderCreate'",
     "----- GARNET -----": "---------------------------",
-    "deploy:garnet": "DEBUG=mud:* mud deploy --profile=garnet --forgeScriptOptions='--slow'",
+    "deploy:garnet": "DEBUG=mud:* mud deploy --profile=garnet",
     "----- REDSTONE -----": "---------------------------",
     "deploy:redstone": "DEBUG=mud:* mud deploy --profile=redstone --forgeScriptOptions='--slow'"
   },
   "dependencies": {
-    "@latticexyz/cli": "2.0.8-account-kit-38709026",
-    "@latticexyz/config": "2.0.8-account-kit-38709026",
-    "@latticexyz/gas-report": "2.0.8-account-kit-38709026",
-    "@latticexyz/schema-type": "2.0.8-account-kit-38709026",
-    "@latticexyz/store": "2.0.8-account-kit-38709026",
-    "@latticexyz/world": "2.0.8-account-kit-38709026",
-    "@latticexyz/world-modules": "2.0.8-account-kit-38709026",
+    "@latticexyz/cli": "2.0.9-account-kit-e3d101f9",
+    "@latticexyz/config": "2.0.9-account-kit-e3d101f9",
+    "@latticexyz/gas-report": "2.0.9-account-kit-e3d101f9",
+    "@latticexyz/schema-type": "2.0.9-account-kit-e3d101f9",
+    "@latticexyz/store": "2.0.9-account-kit-e3d101f9",
+    "@latticexyz/world": "2.0.9-account-kit-e3d101f9",
+    "@latticexyz/world-modules": "2.0.9-account-kit-e3d101f9",
     "@types/node": "^20.12.7",
     "ds-test": "github:dapphub/ds-test#c9ce3f25bde29fc5eb9901842bf02850dfd2d084",
     "forge-std": "github:foundry-rs/forge-std#b4f121555729b3afb3c5ffccb62ff4b6e2818fd3",
     "prettier": "^3.2.5",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.5.4",
-    "solhint-config-mud": "2.0.8-account-kit-38709026",
-    "solhint-plugin-mud": "2.0.8-account-kit-38709026"
+    "solhint-config-mud": "2.0.9-account-kit-e3d101f9",
+    "solhint-plugin-mud": "2.0.9-account-kit-e3d101f9"
   }
 }
