--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -51,6 +51,7 @@
     "heap": "^0.2.7",
     "howler": "^2.2.4",
     "lodash": "^4.17.21",
+    "marked": "^12.0.2",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1",
     "viem": "2.9.31"
