--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "@vitest/coverage-v8": "^1.5.2",
     "d3-array": "^3.2.4",
     "d3-interpolate": "^3.0.1",
+    "marked": "^12.0.2",
     "sass": "^1.76.0",
     "svelte": "^4.2.15",
     "vite": "5.2.11",
