--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,39 +15,38 @@
   },
   "devDependencies": {
     "@fullstory/browser": "^2.0.4",
-    "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@sveltejs/adapter-auto": "^3.2.1",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/d3-shape": "^3.1.6",
     "@types/heap": "^0.2.34",
     "@types/howler": "^2.2.11",
-    "@types/lodash": "^4.17.0",
+    "@types/lodash": "^4.17.4",
     "@types/uuid": "^9.0.8",
-    "@vitest/coverage-v8": "^1.5.2",
+    "@vitest/coverage-v8": "^1.6.0",
     "d3-array": "^3.2.4",
     "d3-interpolate": "^3.0.1",
     "marked": "^12.0.2",
-    "sass": "^1.76.0",
-    "svelte": "^4.2.15",
-    "vite": "5.2.11",
-    "vitest": "^1.5.3"
+    "sass": "^1.77.4",
+    "svelte": "^4.2.17",
+    "vite": "5.2.12",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
-    "@latticexyz/account-kit": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/common": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/dev-tools": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/recs": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/schema-type": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/services": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/store-sync": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/utils": "2.0.12-account-kit-27d878b7",
-    "@latticexyz/world": "2.0.12-account-kit-27d878b7",
+    "@latticexyz/account-kit": "2.0.12-account-kit-5eff5e311",
+    "@latticexyz/common": "2.0.12-account-kit-5eff5e311",
+    "@latticexyz/dev-tools": "2.0.12-account-kit-5eff5e311",
+    "@latticexyz/recs": "2.0.12-account-kit-5eff5e311",
+    "@latticexyz/schema-type": "2.0.12-account-kit-5eff5e311",
+    "@latticexyz/store-sync": "2.0.12-account-kit-5eff5e311",
+    "@latticexyz/utils": "2.0.12-account-kit-5eff5e311",
+    "@latticexyz/world": "2.0.12-account-kit-5eff5e311",
     "@sanity/block-content-to-html": "^2.0.0",
-    "@sanity/client": "^6.17.0",
+    "@sanity/client": "^6.19.1",
     "@sanity/image-url": "^1.0.2",
-    "@sentry/svelte": "^7.113.0",
-    "@sentry/vite-plugin": "^2.16.1",
-    "@wagmi/core": "2.8.0",
+    "@sentry/svelte": "^8.7.0",
+    "@sentry/vite-plugin": "^2.17.0",
+    "@wagmi/core": "2.10.5",
     "contracts": "workspace:*",
     "d3-shape": "^3.2.0",
     "heap": "^0.2.7",
@@ -56,6 +55,6 @@
     "marked": "^12.0.2",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1",
-    "viem": "2.9.31"
+    "viem": "2.13.3"
   }
 }
